updating gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ Algorithm_V1/result/
 # You can add other common ignores here if needed, e.g.:
 *.log
 # *.DS_Store # macOS specific
-# .env # Environment variables
+.env # Environment variables
 *.env # Environment variables
 __pycache__/ # Python compiled files
 venv/ # Python virtual environments
