--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 .env
-.gitignore
+venv/
+Algorithm_V1/Algorithm_V1/
+/Algorithm_V1/input/
+/Algorithm_V1/output/
+/Algorithm_V1/results/
+/Algorithm_V1/input/
