--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Algorithm_V1/Algorithm_V1/
 /Algorithm_V1/output/
 /Algorithm_V1/results/
 /Algorithm_V1/input/
+/Algorithm_V1/recommendation_output/2025*
