--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ Algorithm_V1/Algorithm_V1/
 /Algorithm_V1/trip_map/
 /Algorithm_V1/recommendation_output/2025*
 /Algorithm_V1/recommendation_output/excel_docs/
+/Algorithm_V1/notebook_business_logic/
 *.log
 /Algorithm_V1/_hive/
