--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,6 @@ Algorithm_V1/Algorithm_V1/
 /Algorithm_V1/recommendation_output/2025*
 /Algorithm_V1/recommendation_output/excel_docs/
 /Algorithm_V1/notebook_business_logic/
+Algorithm_V1/notebook_business_logic/*
 *.log
 /Algorithm_V1/_hive/
