--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ Algorithm_V1/Algorithm_V1/
 /Algorithm_V1/trip_map/
 /Algorithm_V1/recommendation_output/2025*
 /Algorithm_V1/recommendation_output/excel_docs/
-/Algorithm_V1/notebook_business_logic/
-Algorithm_V1/notebook_business_logic/*
+/Algorithm_V1/notebook_business_logic/ 
 *.log
-/Algorithm_V1/_hive/
+/Algorithm_V1/_hive/ 
+/Algorithm_V1/maps/
+/Algorithm_V1/recommendation_output/excel_docs
