--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ Algorithm_V1/Algorithm_V1/
 *.log
 /Algorithm_V1/_hive/ 
 /Algorithm_V1/maps/ 
+
+
+/StockPoint_Clustering_and_Routing/input/
+/StockPoint_Clustering_and_Routing/log-sandbox-sp-clustering-and-routing/
